--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint": "^4.8.0",
     "jsdoc": "^3.5.5",
     "mocha": "^4.0.0",
-    "nyc": "^11.2.1"
+    "nyc": "^11.2.1",
+    "proxyquire": "^1.8.0"
   },
   "nyc": {
     "check-coverage": true,
