--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "all": true
   },
   "dependencies": {
+    "@financialforcedev/eslint-config": "^2.0.0",
     "avsc": "^5.0.6",
     "lodash": "^4.17.4"
   }
