--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@financialforcedev/nozomi-openapi",
+  "name": "@financialforcedev/orizuru-openapi",
   "version": "1.0.0",
-  "description": "OpenAPI generator for Nozomi.",
+  "description": "OpenAPI generator for Orizuru.",
   "main": "src/lib/index.js",
   "scripts": {
     "doc": "jsdoc src/lib -r -d doc --readme readme.md",
@@ -10,11 +10,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@stash.dev.financialforce.com:29418/research/financialforcedev--nozomi-openapi.git"
+    "url": "ssh://git@stash.dev.financialforce.com:29418/research/financialforcedev--orizuru-openapi.git"
   },
   "keywords": [
     "openapi",
-    "nozomi",
+    "orizuru",
     "avro"
   ],
   "author": "financialforce",
