--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@stash.dev.financialforce.com:29418/research/financialforcedev--orizuru-openapi.git"
+    "url": "https://github.com/financialforcedev/orizuru-openapi.git"
   },
   "keywords": [
     "openapi",
@@ -48,7 +48,7 @@
     "all": true
   },
   "dependencies": {
-    "@financialforcedev/eslint-config": "^2.0.0",
+    "@financialforcedev/eslint-config": "^3.0.1",
     "avsc": "^5.0.6",
     "lodash": "^4.17.4"
   }
